fix: 커뮤니티 댓글 시스템 일관성 및 보안 개선
- 커뮤니티 상세 댓글 수를 목록과 동일하게 수정
- 삭제된 부모 댓글의 자식 대댓글을 고아 댓글로 표시